testsuite/tests/parser/should_fail/cmdFail005.hs
{-# LANGUAGE Arrows #-}
module CmdFail005 where

f = proc x -> x@(_ -< _)
