testsuite/tests/parser/should_fail/cmdFail005.stderr

cmdFail005.hs:4:15: error: [GHC-03790]
    Parse error in command: x@(_ -< _)
